welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:22: error: not found: value setChangeColor
	setChangeColor(Color.YELLOW); avance(); dessiner();
        ^FlowerPot:25: error: not found: value setChangeColor
	setChangeColor(c); avance(); dessiner(); recule(); recule(); dessiner();
        ^FlowerPot:29: error: not found: value x
	for (i<- 1 to x) {
                      ^FlowerPot:33: error: not found: value x
	for (i<- 1 to x) {
                      ^